Update swagger spec for new paths
