# api/client.gen.go
@@ -1,6 +1,6 @@
 // Package api provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.0 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
 package api
 
 import (
@@ -92,6 +92,9 @@ type ClientInterface interface {
 
 	ExecuteFunction(ctx context.Context, body ExecuteFunctionJSONRequestBody, reqEditors ...RequestEditorFn) (*http.Response, error)
 
+	// ExecuteFunctionBatch request
+	ExecuteFunctionBatch(ctx context.Context, reqEditors ...RequestEditorFn) (*http.Response, error)
+
 	// InstallFunctionWithBody request with any body
 	InstallFunctionWithBody(ctx context.Context, contentType string, body io.Reader, reqEditors ...RequestEditorFn) (*http.Response, error)
 
@@ -120,6 +123,18 @@ func (c *Client) ExecuteFunctionWithBody(ctx context.Context, contentType string
 
 func (c *Client) ExecuteFunction(ctx context.Context, body ExecuteFunctionJSONRequestBody, reqEditors ...RequestEditorFn) (*http.Response, error) {
 	req, err := NewExecuteFunctionRequest(c.Server, body)
+	if err != nil {
+		return nil, err
+	}
+	req = req.WithContext(ctx)
+	if err := c.applyEditors(ctx, req, reqEditors); err != nil {
+		return nil, err
+	}
+	return c.Client.Do(req)
+}
+
+func (c *Client) ExecuteFunctionBatch(ctx context.Context, reqEditors ...RequestEditorFn) (*http.Response, error) {
+	req, err := NewExecuteFunctionBatchRequest(c.Server)
 	if err != nil {
 		return nil, err
 	}
@@ -226,6 +241,33 @@ func NewExecuteFunctionRequestWithBody(server string, contentType string, body i
 	}
 
 	req.Header.Add("Content-Type", contentType)
+
+	return req, nil
+}
+
+// NewExecuteFunctionBatchRequest generates requests for ExecuteFunctionBatch
+func NewExecuteFunctionBatchRequest(server string) (*http.Request, error) {
+	var err error
+
+	serverURL, err := url.Parse(server)
+	if err != nil {
+		return nil, err
+	}
+
+	operationPath := fmt.Sprintf("/api/v1/functions/execute/batch")
+	if operationPath[0] == '/' {
+		operationPath = "." + operationPath
+	}
+
+	queryURL, err := serverURL.Parse(operationPath)
+	if err != nil {
+		return nil, err
+	}
+
+	req, err := http.NewRequest("POST", queryURL.String(), nil)
+	if err != nil {
+		return nil, err
+	}
 
 	return req, nil
 }
@@ -385,6 +427,9 @@ type ClientWithResponsesInterface interface {
 
 	ExecuteFunctionWithResponse(ctx context.Context, body ExecuteFunctionJSONRequestBody, reqEditors ...RequestEditorFn) (*ExecuteFunctionResponse, error)
 
+	// ExecuteFunctionBatchWithResponse request
+	ExecuteFunctionBatchWithResponse(ctx context.Context, reqEditors ...RequestEditorFn) (*ExecuteFunctionBatchResponse, error)
+
 	// InstallFunctionWithBodyWithResponse request with any body
 	InstallFunctionWithBodyWithResponse(ctx context.Context, contentType string, body io.Reader, reqEditors ...RequestEditorFn) (*InstallFunctionResponse, error)
 
@@ -415,6 +460,28 @@ func (r ExecuteFunctionResponse) Status() string {
 
 // StatusCode returns HTTPResponse.StatusCode
 func (r ExecuteFunctionResponse) StatusCode() int {
+	if r.HTTPResponse != nil {
+		return r.HTTPResponse.StatusCode
+	}
+	return 0
+}
+
+type ExecuteFunctionBatchResponse struct {
+	Body         []byte
+	HTTPResponse *http.Response
+	JSON200      *BatchExecutionResponse
+}
+
+// Status returns HTTPResponse.Status
+func (r ExecuteFunctionBatchResponse) Status() string {
+	if r.HTTPResponse != nil {
+		return r.HTTPResponse.Status
+	}
+	return http.StatusText(0)
+}
+
+// StatusCode returns HTTPResponse.StatusCode
+func (r ExecuteFunctionBatchResponse) StatusCode() int {
 	if r.HTTPResponse != nil {
 		return r.HTTPResponse.StatusCode
 	}
@@ -504,6 +571,15 @@ func (c *ClientWithResponses) ExecuteFunctionWithResponse(ctx context.Context, b
 	return ParseExecuteFunctionResponse(rsp)
 }
 
+// ExecuteFunctionBatchWithResponse request returning *ExecuteFunctionBatchResponse
+func (c *ClientWithResponses) ExecuteFunctionBatchWithResponse(ctx context.Context, reqEditors ...RequestEditorFn) (*ExecuteFunctionBatchResponse, error) {
+	rsp, err := c.ExecuteFunctionBatch(ctx, reqEditors...)
+	if err != nil {
+		return nil, err
+	}
+	return ParseExecuteFunctionBatchResponse(rsp)
+}
+
 // InstallFunctionWithBodyWithResponse request with arbitrary body returning *InstallFunctionResponse
 func (c *ClientWithResponses) InstallFunctionWithBodyWithResponse(ctx context.Context, contentType string, body io.Reader, reqEditors ...RequestEditorFn) (*InstallFunctionResponse, error) {
 	rsp, err := c.InstallFunctionWithBody(ctx, contentType, body, reqEditors...)
@@ -563,6 +639,32 @@ func ParseExecuteFunctionResponse(rsp *http.Response) (*ExecuteFunctionResponse,
 	switch {
 	case strings.Contains(rsp.Header.Get("Content-Type"), "json") && rsp.StatusCode == 200:
 		var dest ExecutionResponse
+		if err := json.Unmarshal(bodyBytes, &dest); err != nil {
+			return nil, err
+		}
+		response.JSON200 = &dest
+
+	}
+
+	return response, nil
+}
+
+// ParseExecuteFunctionBatchResponse parses an HTTP response from a ExecuteFunctionBatchWithResponse call
+func ParseExecuteFunctionBatchResponse(rsp *http.Response) (*ExecuteFunctionBatchResponse, error) {
+	bodyBytes, err := io.ReadAll(rsp.Body)
+	defer func() { _ = rsp.Body.Close() }()
+	if err != nil {
+		return nil, err
+	}
+
+	response := &ExecuteFunctionBatchResponse{
+		Body:         bodyBytes,
+		HTTPResponse: rsp,
+	}
+
+	switch {
+	case strings.Contains(rsp.Header.Get("Content-Type"), "json") && rsp.StatusCode == 200:
+		var dest BatchExecutionResponse
 		if err := json.Unmarshal(bodyBytes, &dest); err != nil {
 			return nil, err
 		}
