# api/models.gen.go
@@ -1,6 +1,6 @@
 // Package api provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.0 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
 package api
 
 import (
@@ -16,6 +16,21 @@ type AggregatedResults = aggregate.Results
 
 // AttributeAttestors Require specific attestors as vouchers
 type AttributeAttestors = execute.AttributeAttestors
+
+// BatchExecutionResponse defines model for BatchExecutionResponse.
+type BatchExecutionResponse struct {
+	// Code Status of the batch execution
+	Code string `json:"code,omitempty"`
+
+	// Message If the Batch Execution Request failed, this message might have more info about the error
+	Message string `json:"message,omitempty"`
+
+	// RequestId ID of the Execution Request
+	RequestId string `json:"request_id,omitempty"`
+
+	// Strands Results of the execution of the Batch Request, executed by different nodes
+	Strands map[string]interface{} `json:"strands,omitempty"`
+}
 
 // ExecutionConfig Configuration options for the Execution Request
 type ExecutionConfig = execute.Config
